# whissle-mcp

./: .env  .env.example  .gitignore  README.md  claude_config.example.json  claude_config.json  pyproject.toml  requirement.txt  test_whissle.py
whissle_mcp/: __init__.py  __main__.py  server.py  utils.py
whissle_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
